# To-Bedrock

./: .gitignore  Cargo.toml  LICENSE  README.md  addon.go  betterbedrocktranslate.mcpack  config.go  generate.go  go.mod  input.go  main.go  manifest.go  parse.go  printer.go  struct.go  test.lang
src/: api.rs  fetch_bedrock.rs  fetch_java.rs  generate.rs  main.rs  pack.rs  parse.rs
template/: manifest.json
template/texts/: zh_TW.lang
